deploy/init/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cla-ingress
  annotations:
    kubernetes.io/ingress.class: cla-ic
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: ci-cla
  namespace: cla-ic
spec:
  tls:
    - hosts:
      - srvcl8tr-dev.eastus.cloudapp.azure.com
      secretName: ingress-tls
  rules:
    - host: srvcl8tr-dev.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: umnlatisservicelater-dev
              servicePort: 8080
